--- a/acknowledgement.tex
+++ b/acknowledgement.tex
@@ -21,17 +21,17 @@
 \vspace{0.5cm}
 
 {\noindent\textbf{\textcolor{primary}{Academic Committee}}\\
-\textbf{Prof. [Name]} \& \textbf{Dr. [Name]} — for their invaluable evaluation and guidance.}
+\textbf{Dr. Zied JAOUA} \& \textbf{Prof. MANEL MILLI} — for their invaluable evaluation and guidance.}
 
 \vspace{0.4cm}
 
 {\noindent\textbf{\textcolor{primary}{Supervisor}}\\
-\textbf{Dr. Nadia Bali} — whose mentorship illuminated the path through complex technological challenges.}
+\textbf{Dr. NADIA BALI} — whose mentorship illuminated the path through complex technological challenges.}
 
 \vspace{0.4cm}
 
 {\noindent\textbf{\textcolor{primary}{Company Leader}}\\
-\textbf{Mr. Khalil Ezouiri} — for his visionary leadership and providing the opportunity to contribute to this innovative platform.}
+\textbf{Mr. KHALIL EZOUIRI} — for his visionary leadership and providing the opportunity to contribute to this innovative platform.}
 
 \vspace{0.4cm}
 
