--- a/chapter1.tex
+++ b/chapter1.tex
@@ -47,11 +47,6 @@ The purpose of this section is to present the company within which I developed m
         \rowcolor{background!50}
         Location & Djerba, Tunisia \\
         \hline
-        Website & [Please provide website] \\
-        \hline
-        \rowcolor{background!50}
-        Contact & [Please provide contact info] \\
-        \hline
     \end{tabular}
 \end{table}
 
@@ -172,7 +167,7 @@ The \textbf{\textcolor{primary}{Korpor}} platform is a dual-benefit real estate 
 
 \section{Development methodology}
 
-The completion of the project on its delivery date is the main problem of every software development team. One of the most common problems encountered in the production of software is insufficient technical specifications, poor time management in the face of the use of emerging technology, and sudden changes in needs. In order to avoid these critical issues, we follow an agile methodology for project management, using tools like Git \cite{GitWebsite} for version control and GitHub \cite{GithubWebsite} for collaborative development.
+Meeting project delivery deadlines is a critical challenge in software development. Common issues include insufficient technical specifications, poor time management with emerging technologies, and sudden requirement changes. To address these challenges, we follow an agile methodology using Git \cite{GitWebsite} for version control and GitHub \cite{GithubWebsite} for collaborative development.
 
 \subsection{SCRUM}
 
@@ -189,36 +184,15 @@ The completion of the project on its delivery date is the main problem of every 
 
 \subsubsection{The Product Owner}
 
-Understands the customer and business requirements, then creates and manages the product backlog based on those requirements.
-
-\textbf{Responsibilities:}
-\begin{itemize}
-    \item Managing the scrum backlog
-    \item Release management
-    \item Stakeholder management
-\end{itemize}
+The Product Owner understands the customer and business requirements, then creates and manages the product backlog based on those requirements. Their key responsibilities include managing the scrum backlog, overseeing release management, and handling stakeholder management to ensure project alignment with business objectives.
 
 \subsubsection{Developers}
 
-In Scrum, the term developer or team member refers to anyone who plays a role in the development and support of the product and can include researchers, architects, designers, programmers, etc.
-
-\textbf{Responsibilities:}
-\begin{itemize}
-    \item Delivering the work through the sprint
-    \item To ensure transparency during the sprint, they meet daily at the daily scrum
-\end{itemize}
+In Scrum, the term developer or team member refers to anyone who plays a role in the development and support of the product and can include researchers, architects, designers, programmers, etc. Developers are responsible for delivering the work through the sprint and ensuring transparency during the sprint by meeting daily at the daily scrum to discuss progress and challenges.
 
 \subsubsection{Scrum Master}
 
-The role responsible for gluing everything together and ensuring that scrum is being done well. In practical terms, that means they help the product owner define value, the development team deliver the value, and the scrum team get better.
-
-The Scrum Master focuses on:
-\begin{itemize}
-    \item Transparency
-    \item Empiricism
-    \item Self-organization
-    \item The Scrum events
-\end{itemize}
+The Scrum Master is the role responsible for gluing everything together and ensuring that scrum is being done well. In practical terms, that means they help the product owner define value, the development team deliver the value, and the scrum team get better. The Scrum Master focuses on maintaining transparency, promoting empiricism, encouraging self-organization, and facilitating the Scrum events effectively.
 
 \subsection{The Scrum Events}
 
