--- a/chapter2.tex
+++ b/chapter2.tex
@@ -303,7 +303,7 @@ Table \ref{tab:product-backlog} shows the product backlog for our Korpor project
     \hline
     PB001 & Authentication & As a user, I want to create an account and authenticate securely & Must \\
     \hline
-    PB002 & User Management & As a user, I want to manage my profile information & Must \\
+    PB002 & User Management & As a user, I want to manage my profile & Must \\
     \hline
     PB003 & Authentication & As a user, I want to securely reset my password & Must \\
     \hline
@@ -318,7 +318,7 @@ Table \ref{tab:product-backlog} shows the product backlog for our Korpor project
     \hline
     PB006 & Analytics & As a Super Admin, I want to generate and analyze global performance reports & Could \\
     \hline
-    PB007 & AI Integration & As a Super Admin, I want to chat with an AI assistant that can securely access database information & Could \\
+    PB007 & AI Integration & As a Super Admin, I want to chat with an AI assistant that can securely access database & Could \\
     \hline
     
 
@@ -364,7 +364,7 @@ Table \ref{tab:product-backlog} shows the product backlog for our Korpor project
     \hline
     PB022 & Portfolio Management & As an Investor, I want to track my investment portfolio in real-time & Must \\
     \hline
-    PB023 & Payment Processing & As an Investor, I want to make secure payments through various methods & Should \\
+    PB023 & Payment Processing & As an Investor, I want to make secure payments & Should \\
     \hline
     PB024 & AI Recommendations & As an Investor, I want to receive personalized property recommendations & Must \\
     \hline
@@ -388,21 +388,19 @@ Table \ref{tab:product-backlog} shows the product backlog for our Korpor project
     \hline
     PB032 & NLP Integration & As the System, I want to provide real estate legal information via NLP & Could \\
     \hline
-    PB033 & Security & As the System, I want to secure AI database access for authorized queries & Could \\
-    \hline
     
     % Blockchain & Smart Contract Features section
     \multicolumn{4}{|c|}{\cellcolor{primary!15}\textbf{\textcolor{primary}{Blockchain: Smart Contract Features}}} \\
     \hline
-    PB034 & Blockchain & As the System, I want to create and manage virtual contracts for transactions \cite{WangBlockchainRealEstate2023} & Must \\
+    PB033 & Blockchain & As the System, I want to create and manage virtual contracts for transactions \cite{WangBlockchainRealEstate2023} & Must \\
     \hline
-    PB035 & Blockchain & As an Investor, I want my property investments to be secured via blockchain \cite{McKinseyBlockchainRE2023} & Must \\
+    PB034 & Blockchain & As an Investor, I want my property investments to be secured via blockchain \cite{McKinseyBlockchainRE2023} & Must \\
     \hline
-    PB036 & Blockchain Management & As an Admin, I want to verify and validate blockchain transactions & Should \\
+    PB035 & Blockchain Management & As an Admin, I want to verify and validate blockchain transactions & Should \\
     \hline
-    PB037 & Data Integrity & As the System, I want to store transaction records immutably on blockchain & Must \\
+    PB036 & Data Integrity & As the System, I want to store transaction records immutably on blockchain & Must \\
     \hline
-    PB038 & System Monitoring & As a Super Admin, I want to monitor blockchain health and performance & Should \\
+    PB037 & System Monitoring & As a Super Admin, I want to monitor blockchain health and performance & Should \\
     \hline
 \end{longtable}
 
