--- a/chapter5.tex
+++ b/chapter5.tex
@@ -1,5 +1,7 @@
 \chapter{Blockchain}
 
+\chapterquote{Blockchain could change all that. The central idea to blockchain is that the rights to goods can be transacted, whether they be financial, hard assets or ideas. The goal is not merely to record the plot of land but rather to record the rights involved so that the rights holder cannot be violated.}{Don Tapscott \& Alex Tapscott \cite{Tapscott2016Blockchain}}
+
 \section*{Introduction}
 
 In recent years, blockchain technology has emerged as a powerful tool for building trust, enhancing transparency, and decentralizing processes across various industries \cite{Nakamoto2008Bitcoin, Tapscott2016Blockchain}. In the context of Korpor, a platform aimed at facilitating real estate investments, blockchain plays a crucial role in ensuring the reliability and traceability of financial operations.
@@ -210,210 +212,4 @@ struct Project {
 \end{verbatim}
 
 \paragraph{Investor Struct:}
-The `Investor` struct holds information about each investor's investment:
-\begin{verbatim}
-struct Investor {
-    address investorAddress;
-    uint256 amountInvested;
-    bool hasReceivedRent;
-}
-\end{verbatim}
-
-\subsubsection{Core Functions}
-
-Several key functions implement the core logic of the platform:
-
-\paragraph{recordInvestment:}
-\begin{verbatim}
-function recordInvestment(uint256 projectId) public payable {
-    require(msg.value > 0, "Investment amount must be greater than zero.");
-    projects[projectId].totalFunding += msg.value;
-    investments[msg.sender] += msg.value;
-    projects[projectId].numInvestors++;
-}
-\end{verbatim}
-
-\paragraph{recordProject:}
-\begin{verbatim}
-function recordProject(string memory name, address company) public {
-    uint256 projectId = projectCounter++;
-    projects[projectId] = Project(projectId, name, company, 0, 0, 0);
-}
-\end{verbatim}
-
-\paragraph{distributeRent:}
-\begin{verbatim}
-function distributeRent(uint256 projectId) public {
-    uint256 rentAmount = projects[projectId].rentIncome / projects[projectId].numInvestors;
-    for (uint256 i = 0; i < projects[projectId].numInvestors; i++) {
-        address investor = projects[projectId].investors[i].investorAddress;
-        payable(investor).transfer(rentAmount);
-        projects[projectId].investors[i].hasReceivedRent = true;
-    }
-}
-\end{verbatim}
-
-\paragraph{getInvestmentDetails:}
-\begin{verbatim}
-function getInvestmentDetails(address investor) public view returns (uint256) {
-    return investments[investor];
-}
-\end{verbatim}
-
-\subsection{Deployment \& Testing}
-
-\subsubsection{Deployment}
-
-The smart contracts were deployed following a structured workflow \cite{Wust2018BlockchainNeed}:
-
-\begin{itemize}
-    \item Compiled and deployed using \includegraphics[width=0.05\textwidth]{images/icons/remix.png} \texttt{Remix IDE} onto the \textbf{Sepolia Testnet}
-    \item Deployment transactions signed through \includegraphics[width=0.05\textwidth]{images/icons/metamask.png} \texttt{MetaMask} with test ETH
-    \item Contracts made publicly accessible on \includegraphics[width=0.05\textwidth]{images/icons/etherscan.png} \texttt{Etherscan} for validation and transparency
-    \item Deployed contract addresses:
-    \begin{itemize}
-        \item \textbf{Investment Contract:} \texttt{0xC25E147316c1dBD16f5B6427e381f9F4fF9510D6}
-        \item \textbf{Projects Contract:} \texttt{0xed3c0f14c4b767A65955B71dD1f8328f51f38DE0}
-        \item \textbf{Rent Distribution Contract:} \texttt{0x74Ca4D7B2856dddCb1a074A9e40A7fC33deD6437}
-    \end{itemize}
-\end{itemize}
-
-\newpage
-% Placeholder for Etherscan screenshot after deployment
-\begin{figure}[htbp]
-  \centering
-  % PLACEHOLDER: Insert Etherscan screenshot here
-  \includegraphics[width=0.8\textwidth]{images/etherscan_screenshot.png}
-  \caption{Investment Contract in Etherscan after deployment}
-  \label{fig:etherscan-screenshot}
-\end{figure}
-
-\subsubsection{Testing}
-
-The testing process used the following tools:
-
-\begin{itemize}
-    \item \includegraphics[width=0.05\textwidth]{images/icons/remix.png} \textbf{Remix IDE:} For writing, testing, and deploying Ethereum smart contracts
-    \item \includegraphics[width=0.05\textwidth]{images/icons/hardhat.png} \textbf{Hardhat:} For local blockchain simulation, testing, and deploying contracts
-\end{itemize}
-
-The testing approach included:
-
-\begin{itemize}
-    \item \textbf{Unit Testing:} Testing core functions individually
-    \item \textbf{Integration Testing:} Validating full transaction flows
-    \item \textbf{Event Listening:} Capturing and validating event emissions
-    \item \textbf{Performance Testing:} Ensuring efficient operation under load \cite{Parizi2018SmartContractProgramming}
-\end{itemize}
-
-\newpage
-% Placeholder for Smart Contract Deployment & Interaction flowchart
-\begin{figure}[htbp]
-  \centering
-  % PLACEHOLDER: Insert Smart Contract Deployment & Interaction flowchart here
-  \includegraphics[width=0.8\textwidth]{images/contract_flowchart.png}
-  \caption{Flowchart: Smart Contract Deployment \& Interaction}
-  \label{fig:contract-flowchart}
-\end{figure}
-
-\newpage
-% Placeholder for Full Blockchain Deployment Diagram
-% \begin{figure}[htbp]
-%   \centering
-%   % PLACEHOLDER: Insert Full Blockchain Deployment Diagram here
-%   \includegraphics[width=\textwidth]{images/blockchain_deployment_diagram.png}
-%   \caption{Full Blockchain Deployment Diagram}
-%   \label{fig:blockchain-deployment}
-% \end{figure}
-
-\section{Integration Flow}
-
-The integration flow can be summarized as follows \cite{Casino2019BlockchainApplications}:
-
-\subsection{Investment Flow}
-
-\begin{itemize}
-    \item The frontend initiates a payment session via Paymee's API
-    \item Paymee redirects the user to complete the payment
-    \item Upon success, Paymee calls back our backend with the transaction details
-    \item After verification, the backend invokes the appropriate smart contract to log the investment on the blockchain
-\end{itemize}
-
-% Placeholder for Investment sequence diagram
-\begin{figure}[htbp]
-  \centering
-  % PLACEHOLDER: Insert Investment sequence diagram here
-  \includegraphics[width=\textwidth]{images/investment_sequence.png}
-  \caption{Sequence Diagram of the Investment Process}
-  \label{fig:investment-sequence}
-\end{figure}
-
-\subsection{Rent Distribution Flow}
-
-\begin{itemize}
-    \item The backend initiates the rent distribution process by invoking the smart contract
-    \item The smart contract calculates each investor's share based on their investment proportion
-    \item For each investor, the smart contract emits an event indicating the calculated share
-    \item The backend listens for these events, verifies the data, and triggers the payment through Paymee's API
-    \item System records are updated after successful transactions
-\end{itemize}
-
-% Placeholder for Rent distribution sequence diagram
-\begin{figure}[htbp]
-  \centering
-  % PLACEHOLDER: Insert Rent distribution sequence diagram here
-  \includegraphics[width=\textwidth]{images/rent_distribution_sequence.png}
-  \caption{Sequence Diagram of Rent Distribution}
-  \label{fig:rent-distribution-sequence}
-\end{figure}
-
-\section{Backoffice Features}
-
-\subsection{Administrative Dashboard}
-
-The backoffice provides administrators with a comprehensive dashboard to manage the platform. Key features include:
-
-\begin{itemize}
-    \item Real-time monitoring of blockchain transactions
-    \item Project management interface for adding, editing, and removing properties
-    \item User management with role-based access control \cite{Botha2021BackofficeBlockchain}
-    \item Financial reporting and analytics
-    \item Blockchain transaction verification tools
-\end{itemize}
-
-% Placeholder for Admin Dashboard screenshot
-\begin{figure}[htbp]
-  \centering
-  % PLACEHOLDER: Insert Admin Dashboard screenshot here
-%   \includegraphics[width=0.9\textwidth]{images/admin_dashboard.png}
-  \caption{Blockchain Transaction Monitoring in Administrative Dashboard}
-  \label{fig:admin-dashboard}
-\end{figure}
-
-\subsection{Transaction Management}
-
-Administrators can monitor and manage all types of transactions:
-
-\begin{itemize}
-    \item View all investment records with blockchain verification links
-    \item Monitor rent distribution status and history
-    \item Verify payment processing through the Paymee integration
-    \item Generate financial reports and audit trails
-\end{itemize}
-
-% Placeholder for Transaction Management Interface
-\begin{figure}[htbp]
-  \centering
-  % PLACEHOLDER: Insert Transaction Management Interface screenshot here
-%   \includegraphics[width=0.9\textwidth]{images/transaction_management.png}
-  \caption{Transaction Management Interface with Blockchain Verification}
-  \label{fig:transaction-management}
-\end{figure}
-
-\section*{Conclusion}
-
-The blockchain integration and backoffice features of the Korpor platform provide a robust foundation for secure, transparent, and efficient real estate investment management. By leveraging blockchain technology for critical financial operations while maintaining a user-friendly interface through the backoffice, the platform successfully bridges the gap between traditional finance and decentralized systems \cite{Andoni2019BlockchainOverview}.
-
-The smart contracts deployed on the Ethereum Sepolia Testnet validate core operations such as investment recording and rent distribution, ensuring the accuracy and transparency of financial flows. All interactions are securely handled and recorded on-chain, offering verifiable proof of activity and strengthening participant confidence.
-
-By guaranteeing the integrity of payments and providing clients with clear, tamper-proof records, the blockchain integration significantly enhances user trust and overall satisfaction with the Korpor platform. 
+The `
