--- a/general_introduction.tex
+++ b/general_introduction.tex
@@ -3,10 +3,11 @@
 \vspace*{\fill}
 
 \begin{center}
-\begin{minipage}{1\textwidth}
+\begin{minipage}{0.85\textwidth}
     \begin{center}
         \large\itshape ``Real estate cannot be lost or stolen, nor can it be carried away. Purchased with common sense, paid for in full, and managed with reasonable care, it is about the safest investment in the world.''\cite{RooseveltRealEstateQuote}
-        \vspace{1cm}
+        
+        \vspace{0.8cm}
         
         \normalfont\textcolor{primary}{— Franklin D. Roosevelt}\\
         \small\textcolor{secondary}{32nd President of the United States}
@@ -21,41 +22,50 @@
 
 \chapter*{\centering General Introduction}
 \addcontentsline{toc}{chapter}{General Introduction}
-\vspace{-1cm} % Reduce space after title
 
-% \vspace{0.1cm}
-% \begin{center}
-% % \rule{0.6\textwidth}{1pt}
-% \end{center}
-% \vspace{0.3cm}
+\begingroup
+\setlength{\parindent}{0pt}
+\setlength{\parskip}{0.6em}
+\small
 
-% \vspace{1cm}
-
-\begingroup % Begin group to localize changes
-\setlength{\parindent}{0pt} % Remove paragraph indentation
-\setlength{\parskip}{0.15em} % Reduce space between paragraphs even more
-\footnotesize % Smaller font size to fit on one page
-
+% First paragraph with drop cap
 \firstparagraph{I}n today's rapidly evolving financial landscape, traditional investment methods are often burdened by opaque processes, cumbersome bureaucracy, and significant entry barriers. Investors have long struggled with outdated systems that impede transparency, elevate risks, and complicate access to promising opportunities. Such challenges not only limit diversification but also expose users to uncertainties that modern technology can easily overcome.
 
-\noindent \textbf{\textcolor{primary}{Korpor}} was conceived to transform this paradigm by delivering a fully integrated, AI and blockchain-powered mobile investment platform. By harnessing advanced data analytics, machine learning, and cutting-edge blockchain technology, Korpor streamlines every facet of the investment process. The application offers a seamless user onboarding experience, intuitive project listings enriched with AI-driven recommendations, and a secure, automated investment flow that simplifies transactions while ensuring that every operation is recorded immutably on the blockchain. Investors can manage their portfolios effortlessly through a comprehensive dashboard, with real-time notifications, an interactive AI chatbot, and multi-language support delivering a personalized and globally accessible experience.
+\vspace{0.3cm}
 
-\noindent \textbf{\textcolor{primary}{Security and trust}} are at the heart of Korpor's design. By employing state-of-the-art encryption, blockchain-based transparency, and strict compliance measures, the platform safeguards sensitive financial data and guarantees that every transaction is executed within a secure and verifiable framework. Continuous monitoring, performance optimization, and the immutable nature of blockchain records further ensure that the application remains resilient, scalable, and resistant to fraud in a dynamic market environment.
+% Korpor introduction with emphasis
+\noindent \textbf{\textcolor{primary}{Korpor}} was conceived to transform this paradigm by delivering a fully integrated, AI and blockchain-powered mobile investment platform. By harnessing advanced data analytics, machine learning, and cutting-edge blockchain technology, Korpor streamlines every facet of the investment process. The application offers a seamless user onboarding experience, intuitive project listings enriched with AI-driven recommendations, and a secure, automated investment flow that simplifies transactions while ensuring that every operation is recorded immutably on the blockchain.
 
-\noindent Developed under a flexible Agile framework that combines iterative development with strategic project management best practices, Korpor is designed to rapidly adapt to evolving market trends and user needs. This methodical approach allows for regular feedback, swift enhancements, and the seamless integration of innovative features throughout the development lifecycle.
+\vspace{0.3cm}
 
+% Security section with visual emphasis
+\noindent \textbf{\textcolor{primary}{Security and trust}} are at the heart of Korpor's design. By employing state-of-the-art encryption, blockchain-based transparency, and strict compliance measures, the platform safeguards sensitive financial data and guarantees that every transaction is executed within a secure and verifiable framework. Continuous monitoring, performance optimization, and the immutable nature of blockchain records further ensure that the application remains resilient, scalable, and resistant to fraud.
 
-% Our document is structured as follows:
+\vspace{0.3cm}
 
-% \vspace{-0.4cm} % Reduce space before list
-\begin{itemize}[leftmargin=1.5em, itemsep=0pt, parsep=0pt, topsep=0.05cm]
-\item The first chapter, \textbf{\textcolor{primary}{Project Context}}, delves into the industry challenges and the vision that inspired Korpor's creation.
-\item The second chapter, \textbf{\textcolor{primary}{Analysis and Specification of Requirements}}, outlines the comprehensive requirements gathering, analysis, architectural design, and the selection of cutting-edge tools and technologies.
-\item Subsequent chapters document the progressive implementation of core features—from AI-enhanced project recommendations and blockchain-secured transactions to comprehensive portfolio management—each developed through clearly defined sprints encompassing analysis, design, and deployment phases.
+% Development methodology
+\noindent Developed under a flexible \textbf{Agile framework} that combines iterative development with strategic project management best practices, Korpor is designed to rapidly adapt to evolving market trends and user needs. This methodical approach allows for regular feedback, swift enhancements, and the seamless integration of innovative features throughout the development lifecycle.
+
+\vspace{0.3cm}
+
+% Document structure section with better formatting
+\noindent \textbf{\textcolor{primary}{Document Structure:}}
+
+\vspace{0.2cm}
+
+\begin{itemize}[leftmargin=1.8em, itemsep=0.25em, parsep=0pt, topsep=0.1cm]
+    \item \textbf{Chapter 1: \textcolor{primary}{Project Context}} — Explores the industry challenges and the vision that inspired Korpor's creation.
+    
+    \item \textbf{Chapter 2: \textcolor{primary}{Analysis and Specification}} — Outlines the comprehensive requirements gathering, analysis, architectural design, and the selection of cutting-edge tools and technologies.
+    
+    \item \textbf{Subsequent Chapters} — Document the progressive implementation of core features—from AI-enhanced project recommendations and blockchain-secured transactions to comprehensive portfolio management.
 \end{itemize}
 
-\vspace{0.05cm}
-\noindent Through this structured approach, we demonstrate how Korpor leverages modern technology to reimagine investment management, offering a secure, transparent, and dynamic solution that is set to redefine digital financial engagement.
+\vspace{0.2cm}
 
-\endgroup % End group to restore normal settings
-\enlargethispage{4cm} % Allow this page to be longer
+% Conclusion with emphasis
+\noindent Through this structured approach, we demonstrate how \textbf{\textcolor{primary}{Korpor}} leverages modern technology to reimagine investment management, offering a secure, transparent, and dynamic solution that is set to redefine digital financial engagement.
+
+\endgroup
+
+\enlargethispage{2cm}
