--- a/dedication.tex
+++ b/dedication.tex
@@ -1,11 +1,40 @@
 \chapter*{\centering Dedication}
 \addcontentsline{toc}{chapter}{Dedication}
 
-\vspace*{0cm}
+\begin{center}
+{\itshape\large 
+To the memory of my beloved father, whose guidance and wisdom continue to light my path. \\
+Though no longer with us, your presence remains in every achievement of my life.
 
-\heartpar{\itshape\large To the memory of my beloved father, whose guidance and wisdom continue to light my path. Though no longer with us, your presence remains in every achievement of my life. To my loving mother, whose strength and endless support shaped who I am today. To my sister and brother, whose companionship and encouragement have been constant sources of joy and motivation. To my little Aryouma, whose innocence and love bring happiness to our family every day. To Mme Nadia, my professors and mentors, who have guided me with knowledge and patience throughout my academic journey. To my friends, whose encouragement made this journey worthwhile. This work is dedicated to all of you, but especially to you, Father.}
+\vspace{0.8cm}
 
-\vspace{1.5cm}
+To my loving mother, whose strength and endless support shaped who I am today.
+
+\vspace{0.8cm}
+
+To my sister and brother, whose companionship and encouragement \\
+have been constant sources of joy and motivation.
+
+\vspace{0.8cm}
+
+To my little Aryouma, whose innocence and love bring happiness to our family every day.
+
+\vspace{0.8cm}
+
+To Mme Nadia, my professors and mentors, who have guided me \\
+with knowledge and patience throughout my academic journey.
+
+\vspace{0.8cm}
+
+To my friends, whose encouragement made this journey worthwhile.
+
+\vspace{0.8cm}
+
+\textbf{This work is dedicated to all of you, but especially to you, Father.}
+}
+\end{center}
+
+\vspace{0.5cm}
 
 \begin{center}
 \includegraphics[width=0.2\textwidth]{images/qr-code-dedication.png}
